--- a/api/internal/api-qos-internal.yaml
+++ b/api/internal/api-qos-internal.yaml
@@ -7,6 +7,16 @@ tags:
 paths:
   /v1/internal/qos:
     get:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 30092
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'N'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
