Match-id-b333a334ef21b612dc1d0ba2a78aa1de659329df

--- a/api/external/api-globa-search.yaml
+++ b/api/external/api-globa-search.yaml
@@ -12,6 +12,7 @@ tags:
 paths:
   /v1/search/file:
     post:
+      x-product: OceanProtect X
       x-dm-role: 'N'
       x-rd-admin-role: 'N'
       x-dp-admin-role: 'Y'
