--- a/api/internal/api-cert-internal.yaml
+++ b/api/internal/api-cert-internal.yaml
@@ -12,6 +12,16 @@ tags:
 paths:
   /v1/internal/certs/components/genCert:
     post:
+      x-product: OceanProtect X
+      x-dm-role: 'N'
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'N'
+      x-sysadmin-role: 'Y'
       tags:
         - component-internal-controller
       summary: agent证书签发
@@ -80,7 +90,7 @@ definitions:
       certType:
         type: integer
         format: int32
-        description: '证书类型。【取值范围】0:未知类型, 1:服务证书, 2:CA证书, 3:自签发证书'
+        description: 证书类型。【取值范围】0:未知类型, 1:服务证书, 2:CA证书, 3:自签发证书
       effectiveTime:
         type: integer
         format: int64
@@ -122,7 +132,7 @@ definitions:
       certType:
         type: integer
         format: int32
-        description: '证书类型。【取值范围】0:未知类型, 1:服务证书, 2:CA证书, 3:自签发证书'
+        description: 证书类型。【取值范围】0:未知类型, 1:服务证书, 2:CA证书, 3:自签发证书
       certificateId:
         type: string
         description: 证书ID
